# knightssolver

./: LICENSE  Makefile  elm-package.json  knightssolver.cabal
client/: Main.elm
src/: BacktrackKS.hs  KnightSolver.hs  Main.hs
static/: index.html
