name:                knightssolver
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/alexlegg/knightssolver#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Legg
maintainer:          alex@legg.info
copyright:           Copyright: (c) 2016 Alex Legg
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable knightssolver
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , sbv >= 5.11 && < 6
                     , syb >= 0.6 && < 1
                     , containers
                     , text
                     , transformers
                     , aeson >= 0.9.0.1 && < 0.10
                     , Spock >= 0.10.0.1 && < 1
